--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-<h1> test</h1>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Page Title</title>
+</head>
+
+<body>
+
+  <h1>Look A Panda!!!</h1>
+
+  <p>This is a paragraph.</p>
+
+</body>
+
+</html>
